quoting-CypressTK1/force-app/main/default/objects/TaskRoleSummary__c/fields/EstimatedDuration__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDuration__c</fullName>
    <label>Estimated duration</label>
    <summarizedField>Task__c.EstimatedDuration__c</summarizedField>
    <summaryForeignKey>Task__c.RoleSummaryId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>