quoting-CypressTK1/force-app/main/default/objects/TaskRoleSummary__c/fields/PhaseId__c.field-meta.xml
<CustomField>
    <fullName>PhaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phase</label>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Role Summaries</relationshipLabel>
    <relationshipName>RoleSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>