quoting-CypressTK1/force-app/main/default/objects/TaskRoleSummary__c/fields/RateCardItemId__c.field-meta.xml
<CustomField>
    <fullName>RateCardItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Card Item</label>
    <referenceTo>RateCardItem__c</referenceTo>
    <relationshipLabel>Task Role Summaries</relationshipLabel>
    <relationshipName>TaskRoleSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>