quoting-CypressTK1/force-app/main/default/objects/TaskRoleSummary__c/fields/SummaryLevel__c.field-meta.xml
<CustomField>
    <fullName>SummaryLevel__c</fullName>
    <label>Summary Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Estimate</fullName>
            </value>
            <value>
                <fullName>Activity Group</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>