quoting-CypressTK1/force-app/main/default/objects/TaskRoleSummary__c/fields/TotalAdjustments__c.field-meta.xml
<CustomField>
    <fullName>TotalAdjustments__c</fullName>
    <formula>RolledUpAdjustments__c + LevelAdjustments__c + LevelAdjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total adjustments</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>