quoting-CypressTK1/force-app/main/default/objects/TaskRoleSummary__c/fields/TotalEstimatedAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalEstimatedAmount__c</fullName>
    <formula>RateCardItemId__r.UnitPrice__c / (CASE(RateCardItemId__r.PriceUOM__c ,
&apos;Daily&apos;, $CustomMetadata.ScheduleSetting__mdt.StandardSchedule.StandardDayHours__c,
&apos;Weekly&apos;, $CustomMetadata.ScheduleSetting__mdt.StandardSchedule.StandardWeekHours__c,
&apos;Monthly&apos;, $CustomMetadata.ScheduleSetting__mdt.StandardSchedule.StandardMonthHours__c,
&apos;Yearly&apos;, $CustomMetadata.ScheduleSetting__mdt.StandardSchedule.StandardYearHours__c,
1)) *  TotalEstimatedDuration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimated Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>