quoting-CypressTK1/force-app/main/default/objects/TaskRoleSummary__c/fields/TotalEstimatedDuration__c.field-meta.xml
<CustomField>
    <fullName>TotalEstimatedDuration__c</fullName>
    <formula>TotalCalculatedDuration__c + TotalAdjustments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total estimated duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>